docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_wysiwyg-text-area.scss
// WYSIWYG text area styles.

// General WYSIWYG styles (all fields).
.text-long,
.text-with-summary,
.views-field-body {
  *:last-child {
    margin-bottom: 0;
  }
}

// Flexible and private page text areas.
.field-hs-text-area,
.field-hs-priv-text-area {
  @include clearfix;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-left: 0;
    margin-right: 0;
  }

  h2,
  h3,
  h4,
  h5,
  h6 {
    @include hb-traditional {
      margin-bottom: hb-calculate-rems(4px);
    }

    &:only-child {
      margin: 0;
    }
  }

  h1 {
    margin-top: hb-spacing-width();

    @include hb-themes(('colorful', 'airy')) {
      margin-bottom: hb-spacing-width('xxs');
    }
  }

  h2 {
    margin-top: hb-spacing-width('md');

    @include hb-themes(('colorful', 'airy')) {
      margin-bottom: hb-calculate-rems(12px);

      @include grid-media-min('md') {
        margin-top: hb-spacing-width();
        margin-bottom: hb-spacing-width('xxxs');
      }
    }
  }

  h3 {
    @include hb-traditional {
      margin-top: hb-spacing-width('xs');
    }

    @include hb-themes(('colorful', 'airy')) {
      margin-top: hb-spacing-width('sm');
      margin-bottom: hb-calculate-rems(10px);
    }
  }

  h4 {
    margin-top: hb-calculate-rems(18px);

    @include hb-themes(('colorful', 'airy')) {
      margin-bottom: hb-calculate-rems(4px);
    }
  }

  h5 {
    margin-top: hb-calculate-rems(18px);

    @include hb-themes(('colorful', 'airy')) {
      margin-bottom: hb-calculate-rems(3px);
    }
  }

  h6 {
    margin-top: hb-calculate-rems(18px);

    @include hb-themes(('colorful', 'airy')) {
      margin-bottom: hb-calculate-rems(3px);
    }
  }

  // jump to link target - remove link styles from anchor tag
  a:not([href]):not([class]) {
    border-bottom: 0;
    transition: none;
    background-image: none;
  }

  a {
    overflow: hidden;

    img {
      transform: scale(1);
      transition: hb-transition(transform);

      &:hover,
      &:focus {
        transform: scale($hb-image-hover-scale);
      }
    }
  }

  // Override default link color for the Canyon color pairing.
  @include hb-themes(('colorful', 'airy')) {
    .hb-well &,
    .hs-paragraph-style--well &,
    .hs-paragraph-style--well-full-width &,
    .hs-breakout-box {
      .hc-pairing-canyon & {
        a:not([class]), a.mailto, a[href^='mailto:'], a.ext, a.hs-external-link {
          color: var(--palette--primary);

          &:hover,
          &:focus {
            color: var(--palette--tertiary-darken-20);
          }
        }

        // Ensure that the external link icon color is correct.
        a.hs-external-link {
          &::after {
            background-image: svg(hc-get-icons('ext-link', map-get(map-get($hc-colorful-pairings, 'canyon'), 'primary')));
          }

          &:hover,
          &:focus {
            &::after {
              background-image: svg(hc-get-icons('ext-link', map-get(map-get($hc-colorful-pairings, 'canyon'), 'tertiary-darken-20')));
            }
          }
        }
      }
    }
  }

  // Override links color and links with icons for the Firefinch color pairing.
  @include hb-traditional {
    .hb-well &,
    .hs-paragraph-style--well &,
    .hs-paragraph-style--well-full-width &,
    .hs-breakout-box {
      .ht-pairing-firefinch & {
        a.hs-more-link, a.hs-private-link, a.hs-pdf-link, a.hs-file-link {
          color: var(--palette--tertiary);

          &:hover,
          &:focus {
            color: var(--palette--tertiary-darken-20);
          }
        }

        // Ensure that the private link icon color and more link icon color are correct.
        a.hs-private-link {
          &::before {
            background-image: svg(hc-get-icons('lock', map-get(map-get($ht-traditional-pairings, 'firefinch'), 'tertiary')));
          }

          &:hover,
          &:focus {
            &::before {
              background-image: svg(hc-get-icons('lock', map-get(map-get($ht-traditional-pairings, 'firefinch'), 'tertiary-darken-20')));
            }
          }
        }

        a.hs-more-link {
          &::after {
            background-image: svg(hc-get-icons('arrow-right-long', map-get(map-get($ht-traditional-pairings, 'firefinch'), 'tertiary')));
          }

          &:hover,
          &:focus {
            &::after {
              background-image: svg(hc-get-icons('arrow-right-long', map-get(map-get($ht-traditional-pairings, 'firefinch'), 'tertiary-darken-20')));
            }
          }
        }

        a.hs-secondary-button {
          color: var(--palette--tertiary);
          border-color: var(--palette--tertiary);

          &:hover,
          &:focus {
            color: var(--palette--white);
            border-color: var(--palette--secondary);
          }
        }
      }
    }
  }

  // Only in the textarea, does the well get display: table for being floated
  .hs-well,
  .pullquote {
    display: table;
  }
}

// Utility classes used in Content Type WYSIWYGs and in Text Area WYSIWYG components
// hs-caption and D7 import utility class map and loop
$captions: (hs-caption, caption);

@each $caption in $captions {
  .#{$caption},
  .views-row #{$caption},
  .views-row #{$caption} a {
    @include hb-caption;
  }
}

$credits: (hs-credits, credits);

@each $credit in $credits {
  .#{$credit},
  .views-row #{$credit},
  .views-row #{$credit} a {
    @include hb-caption($italic: true);
  }
}

// Default caption alignment behavior without caption/credit overlay styles.
.caption {
  figcaption {
    text-align: right;
  }
}

.hs-font-lead,
.summary {
  font-size: hb-calculate-rems(20px);
  font-weight: hb-theme-font-weight(semibold);
  line-height: 127%;
  color: var(--palette--gray-dark);

  @include grid-media-min('lg') {
    font-size: hb-calculate-rems(22px);
  }

  .hb-dark-pattern & {
    color: var(--palette--gray-light);
  }

  li & {
    margin: hb-calculate-rems(-3px) 0 0;
  }
}

.hs-font-lead {
  @include hb-font-lead-animation;
}

.hs-font-splash {
  @include hb-font-splash-animation;

  @include hb-traditional {
    ~ .hs-font-lead {
      animation-duration: 1450ms !important;
      animation-delay: 250ms;

      @media (prefers-reduced-motion: reduce) {
        animation-delay: -1s;
        animation-duration: 1s !important;
        animation-iteration-count: 1;
      }
    }
  }

  &,
  .infotext {
    @include hb-heading-1;

    @include grid-media-min('md') {
      margin: hb-spacing-width() 0 hb-spacing-width('xxs');
    }

    @include hb-themes(('colorful', 'airy')) {
      color: var(--palette--primary);

      .hb-dark-pattern & {
        color: var(--palette--gray-light);
      }
    }

    @include hb-traditional {
      color: var(--palette--primary);
    }

    li & {
      margin: hb-calculate-rems(-3px) 0 0;
    }
  }
}

.hs-short-line-length {
  max-width: hb-calculate-rems(700px);
}

.hs-table--borderless {
  thead {
    th {
      border: 0;
    }
  }

  td {
    border-left: 0;
    border-right: 0;
  }
}

// Drupal base classes used in Content Type WYSIWYGs and in Text Area WYSIWYG components
.emphasized-text,
.hs-emphasized-text {
  font-style: italic;
  font-weight: inherit;
  font-size: inherit;
}

// Views style application for hs-emphasized-text
.views-row .hs-emphasized-text,
.views-row .hs-emphasized-text a {
  @include hb-text-reset;
  font-style: italic;
  font-weight: inherit;
  font-size: inherit;
}

// media
.align {
  &-right {
    max-width: 100%;

    @include grid-media-min('sm') {
      max-width: 50%;
    }

    @include grid-media-min('md') {
      max-width: 75%;
    }

    @include hb-themes(('colorful', 'airy')) {
      margin: 0 0 hb-spacing-width('sm') hb-spacing-width('sm');
    }

    @include hb-traditional {
      margin: 0 0 hb-spacing-width('xs') hb-spacing-width('xs');
    }
  }

  &-left {
    max-width: 100%;

    @include grid-media-min('sm') {
      max-width: 50%;
    }

    @include grid-media-min('md') {
      max-width: 75%;
    }

    @include hb-themes(('colorful', 'airy')) {
      margin: 0 hb-spacing-width('sm') hb-spacing-width('sm') 0;
    }

    @include hb-traditional {
      margin: 0 hb-spacing-width('xs') hb-spacing-width('xs') 0;
    }
  }

  &-center {
    @include hb-themes(('colorful', 'airy')) {
      margin: 0 auto hb-spacing-width('sm');
    }

    @include hb-traditional {
      margin: 0 auto hb-spacing-width('xs');
    }

    img {
      margin: 0 auto;
    }
  }
}

// blockquotes
// The text area blockquote content is placed inside of a paragraph tag.
blockquote:nth-child(n) {
  @include hb-blockquote;

  .hb-local-footer & {
    margin: 0 0 hb-calculate-rems(20px); // adjust blockquote browser spacing defaults when placed in the local footer
  }
}

a[href*="//"].hs-external-link,
.hs-external-link a[href*="//"] {
  @include hb-link--inline;
  @include hb-external-link-icon;

  .hb-dark-pattern.hb-local-footer & {
    @include hb-colorful {
      color: var(--palette--white);

      &:hover,
      &:focus {
        color: var(--palette--gray-medium);
      }

      &::after {
        @include hb-icon-background('ext-link', 'white');
      }

      &:hover::after {
        @include hb-icon-background('ext-link', 'gray-medium');
      }
    }

    @include hb-traditional {
      color: var(--palette--tertiary-highlight);

      &::after {
        @include hb-icon-background('ext-link', 'tertiary-highlight');
      }

      &:hover::after {
        @include hb-icon-background('ext-link', 'tertiary-highlight-darken-10');
      }
    }
  }
}

a.hs-private-link,
.hs-private-link a,
a.private-link,
.private-link a {
  @include hb-link--inline;
  color: var(--palette--secondary);

  .hb-dark-pattern.hb-local-footer & {
    @include hb-colorful {
      color: var(--palette--white);
    }

    &:hover {
      @include hb-colorful {
        color: var(--palette--gray-medium);
      }
    }
  }

  &::before {
    content: '';
    display: inline-block;
    height: hb-calculate-rems(16px);
    width: hb-calculate-rems(16px);
    margin-bottom: hb-calculate-rems(-2px);
    margin-right: hb-calculate-rems(2px);

    @include hb-icon-background('lock', 'secondary');
    background-repeat: no-repeat;
    background-size: cover;

    .hb-dark-pattern & {
      @include hb-colorful {
        @include hb-icon-background('lock', 'white');
      }

      @include hb-traditional {
        @include hb-icon-background('lock', 'tertiary-highlight');
      }
    }
  }

  &:hover::before {
    @include hb-icon-background('lock', 'tertiary-darken-20');

    .hb-dark-pattern & {
      @include hb-colorful {
        @include hb-icon-background('lock', 'gray-medium');
      }

      @include hb-traditional {
        @include hb-icon-background('lock', 'tertiary-highlight-darken-10');
      }
    }
  }
}

.hs-mailto-link a,
a.hs-mailto-link {
  @include hb-fa-mailto-icon;

  // The font awesome icon is hidden by default in themes, this shows it
  .fa-mailto {
    display: initial;
  }
}

// hs-more-link and D7 import utility class map and loop
$more-links: (hs-more-link);

@each $more-link in $more-links {
  a.#{$more-link},
  button.#{$more-link},
  .#{$more-link} a,
  .#{$more-link} button {
    margin-bottom: hb-calculate-rems(20px);
    @include hb-more-link;
  }
}

a.hs-pdf-link {
  @include hb-icon-link-inline('pdf');

  // Outline pdf icon option
  &--outline {
    @include hb-icon-link-inline('pdf');

    &::before {
      font-weight: 400;
    }
  }
}

a.hs-file-link {
  @include hb-icon-link-inline('file');

  // Outline file icon option
  &--outline {
    @include hb-icon-link-inline('file');

    &::before {
      font-weight: 400;
    }
  }
}

